compiler/testData/diagnostics/tests/regressions/TypeParameterAsASupertype.jet
class A<T> : <!SUPERTYPE_NOT_A_CLASS_OR_TRAIT!>T<!> {}